--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -1,4 +1,3 @@
-<!-- http://api.openweathermap.org/data/2.5/weather?lat=27.6332544&lon=84.1056256&appid=b111afc8f7de16f99a904c5af0357466&units=metric -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +10,7 @@
 <body>
     <h1>Weather Report of Your Area</h1>
     <div class="container">Loading....</div>
-    <script src="main.js"></script>
+    <script type="module" src="config.js"></script>
+    <script type="module" src="main.js"></script>
 </bod>
 </html>
