--- a/Geolocation/public/list/index.html
+++ b/Geolocation/public/list/index.html
@@ -27,7 +27,7 @@
   <body>
     <h1>Welcome</h1>
     <div class="link">
-      <a id="a-submit" href="/">Submit</a> | <a id="a-list" href="/list">List</a
+      <a id="a-submit" href="/">Submit</a> | <a id="a-list" href="/list">List</a>
     </div> </br>
     <div class="container"></div>
     <script src="list.js"></script>
